feat(api): add getting user's invitations, add getting teams requests
